<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textLight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TitleTextViewStyle"/>

        <TextView
            android:id="@+id/textViewTemperature"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textviewTemperaure" />

        <TextView
            android:id="@+id/textViewHudimity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textviewHudimity" />

        <TextView
            android:id="@+id/textViewTemperatureFromInet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textviewTempInet" />

        <TextView
            android:id="@+id/textViewLoadResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textviewLoadResult" />


        <Button
            android:id="@+id/buttonLoad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonLoad" />

        <TextView
            android:id="@+id/textViewInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="" />

        <ImageView
            android:id="@+id/image_1"
            android:layout_width="match_parent"
            android:layout_height="92dp"
            tools:ignore="ContentDescription" />


    </LinearLayout>
</ScrollView>