<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

    </androidx.recyclerview.widget.RecyclerView>

    <TextView
        android:id="@+id/textViewPreference"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textviewPreference" />

    <TextView
        android:id="@+id/currentTemperatureTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/currentTemperatureTextView" />

    <TextView
        android:id="@+id/detailsTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/detailsTextView" />

    <TextView
        android:id="@+id/weatherIconTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/updatedTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>